# fraud-platform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fraud_platform/: __init__.py  features.py
tests/: test_features.py
