[project]
name = "fraud-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chenchen", email = "pirawit.cc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
